# compass

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE_MD_UPGRADE_SUMMARY.md  CLI_OODA_INTEGRATION_PLAN.md  CLI_OODA_INTEGRATION_PLAN_REVISED.md  CLI_PLAN_REVIEW_AGENT_IOTA.md  CLI_PLAN_REVIEW_AGENT_THETA.md  CONSOLIDATED_REVIEW_AND_FIX_PLAN.md  CONTRIBUTING.md  DAY_2_COMPLETION_REPORT.md  DAY_2_CRITICAL_FIXES_SUMMARY.md  DAY_3_COMPLETION_REPORT.md  DAY_3_REVIEW_AGENT_ALPHA.md  DAY_3_REVIEW_AGENT_BETA.md  DAY_3_REVIEW_COMPREHENSIVE_AGENT_BETA.md  DAY_3_REVIEW_EXPERT_DELTA.md  DAY_3_TODO_STATUS.md  DAY_4_HANDOFF.md  DEMO.md  DOCUMENTATION_REVIEW_AGENT_ALPHA.md  GETTING_STARTED.md  GUIDE_ENHANCEMENT_SUMMARY.md  MANUAL_TEST_PLAN.md  MANUAL_TEST_PLAN_REVISED.md  Makefile  NETWORK_AGENT_REVIEW_AGENT_BETA.md  NETWORK_AGENT_REVIEW_AGENT_BETA_ORCHESTRATOR_PLAN.md  ORGANIZATION_SUMMARY.md  P0_FIXES_COMPLETION_SUMMARY.md  PART_1_REVIEW_AGENT_ALPHA.md  PART_1_REVIEW_AGENT_BETA.md  PART_1_REVIEW_SYNTHESIS.md  PART_2_SUMMARY.md  PART_3_COMPLETION_SUMMARY.md  PART_3_IMPLEMENTATION_REVIEW_ALPHA.md  PART_3_IMPLEMENTATION_REVIEW_SYNTHESIS.md  PART_3_PLAN_REVIEW_ALPHA.md  PART_3_PLAN_REVIEW_BETA.md  (+42 more)
.github/: dependabot.yml
docs/: README.md
examples/: README.md  query_generator_integration_poc.py
observability/: README.md  grafana-dashboards.yml  grafana-datasources.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
planning/: README.md
postmortems/: api-backend-5fdac65a-2025-11-21-121953.md  api-backend-5fe8803f-2025-11-18-233036.md  api-backend-6abe3d00-2025-11-18-233107.md  api-backend-cee5f44d-2025-11-18-233129.md  payment-db-0bbf8425-2025-11-18-232006.md  payment-db-0f52d5a1-2025-11-18-232006.md  payment-db-1bef3f25-2025-11-18-233036.md  payment-db-66dc351d-2025-11-18-233129.md  payment-db-7416c508-2025-11-18-232125.md  payment-db-85fca541-2025-11-21-195814.md  payment-db-b43cd506-2025-11-18-233036.md  payment-db-c0f9fb05-2025-11-18-233107.md  payment-db-c7ed491b-2025-11-18-233129.md  payment-db-d9ff9652-2025-11-18-233107.md  payment-db-dba31baf-2025-11-18-232125.md  payment-db-e5c565cf-2025-11-21-195814.md  test-service-08b56f73-2025-11-18-233036.md  test-service-0ca541b1-2025-11-18-232125.md  test-service-1b31f852-2025-11-21-195814.md  test-service-2a3b1f88-2025-11-18-233107.md  test-service-429260de-2025-11-18-232125.md  test-service-430e9cfd-2025-11-18-233129.md  test-service-4a3dc256-2025-11-21-195814.md  test-service-4ee21297-2025-11-18-233129.md  test-service-5e608b0f-2025-11-18-232006.md  test-service-63fb7ebe-2025-11-21-195814.md  test-service-69867d2f-2025-11-18-232125.md  test-service-9656661d-2025-11-18-233036.md  test-service-9c05d4cf-2025-11-18-232006.md  test-service-cb619e3f-2025-11-18-232006.md  test-service-cc002265-2025-11-18-233129.md  test-service-d213d2c4-2025-11-18-233107.md  test-service-ea69ed33-2025-11-18-233036.md  (+1 more)
scripts/: dev-env.sh  (+7 more)
(+260 files in other folders)
