[tool.poetry]
name = "compass"
version = "0.1.0"
description = "Comprehensive Observability Multi-Agent Platform for Adaptive System Solutions - AI-powered incident investigation platform"
authors = ["COMPASS Team"]
readme = "README.md"
packages = [{include = "compass", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
redis = "^5.0.0"
httpx = "^0.25.0"
typer = "^0.9.0"
rich = "^13.7.0"
openai = "^1.6.0"
anthropic = "^0.40.0"
tiktoken = "^0.5.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
opentelemetry-instrumentation-redis = "^0.42b0"
opentelemetry-exporter-otlp = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-watch = "^4.2.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
bandit = {extras = ["toml"], version = "^1.7.5"}
safety = "^3.0.0"
detect-secrets = "^1.4.0"
locust = "^2.17.0"
types-redis = "^4.6.0"
types-setuptools = "^69.0.0"
# Optional exporters for local development
prometheus-client = "^0.19.0"
opentelemetry-exporter-prometheus = "^0.42b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=compass",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--no-cov-on-fail",
]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services",
    "demo: tests requiring full demo environment (docker-compose.observability.yml)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90

[tool.bandit]
exclude_dirs = ["/tests", "/.venv", "/venv"]
skips = ["B101"]  # assert_used - acceptable in tests
